# technopark-cpp-task-2

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
include/: matrix.h  matrix.hpp  vector.hpp
scripts/: coverage.sh
src/: main.cpp  matrix.cpp  vector.cpp
tests/: CMakeLists.txt  test_matrix.cpp  test_vector.cpp
